# christopher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  __init__.py  dev-requirements.txt  docker-compose.yaml  ollama-values.yaml  pyproject.toml  requirements.txt  values.yaml
.cursor/rules/: agent-decorator.mdc  cursor-rules.mdc  linter.mdc  testing.mdc
.devcontainer/: devcontainer.json  post-start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
agents/: agent_default.py  agent_math.py  agent_programming.py  agent_weather.py  agent_writing.py
api/: server.py
cli/: __init__.py  cli.py
conversations/: conversation_manager.py  thread_store.py
core/: __init__.py  christopher.py  config.py  langgraph_runner.py  registry.py
llm/: ollama_client.py
mcp_servers/: math_server.py
tests/agents/: test_agent_default.py  test_agent_math.py  test_agent_programming.py  test_agent_weather.py  test_writing_agent.py
tests/cli/: test_cli.py
tests/core/: test_christopher.py  test_config.py  test_langgraph_runner.py  test_registry.py
tests/llm/: test_ollama_client.py
tests/mcp_servers/: test_math_server.py
